<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="login"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="login"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img" />

    </FrameLayout>


    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:textColorHint="@color/light_font"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/light_font"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="156dp"
        android:layout_height="77dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/buttonshapewhitebg"
        android:onClick="irRegistro"
        android:text="@string/registrarse"
        android:textColorHint="@color/light_font"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="156dp"
        android:layout_height="77dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/buttonshapewhitebg"
        android:onClick="login"
        android:text="@string/acceder"
        android:textColorHint="@color/light_font"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />
</androidx.constraintlayout.widget.ConstraintLayout>